# alex

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  alex.h  build.sh  crash.cpp  install_catch2.sh
.github/workflows/: build-and-test.yml  cmake.yml  make-single-header.yml  verify.yml
bench/: CMakeLists.txt
ci/: make_single_include.sh  verify.sh
example/: CMakeLists.txt  basic.cpp  constexpr.cpp  constexpr2.cpp  hello_world.cpp  json.cpp  parse_match.cpp  poly.cpp  recursive.cpp  templates.cpp  trees.cpp  trees2.cpp
include/alex/: alex.h  alex.hpp  any.h  any_but.h  buffer_source.h  buffer_stream.h  defines.h  empty.h  eof.h  fixed.h  from_to.h  grammar.h  grammar_abstract.h  is_lex.hpp  lexing_context.hpp  literal.h  not.h  one_of.h  optional.h  parse.h  parser.h  poly.h  reader.h  reader_abstract.h  recursive.h  repeat.h  seq.h  stream.h  stream_buffer.h  stream_forker.h  stream_range.h  stream_traits.h  symbol.h  symbol_tree.h  tag.h  to_lex.hpp  token.h  token_data.h  token_root.h  token_tree.h  (+4 more)
include/alex/detail/: iterator_range.h  lifo_tree.h  lifo_tree_builder.h  lifo_tree_element.h  lifo_tree_iterator.h  lifo_tree_node.h  lifo_tree_sentinel.h  stack_tree_builder_vector.h  stack_tree_container.h  stack_tree_element.h  stack_tree_iterator.h  stack_tree_node.h  tree_span.h
include/alext/: alext.h  fixed_capacity_token_tree_builder.h  fixed_size_token_tree.h  token_tree_builder_fixed_capacity.h
include/alext/detail/: fixed_capacity_lifo_tree_builder.h  lifo_tree_fixed_capacity_builder.h  stack_tree_builder_fixed_capacity.h
include/lt3/: alex.h
include/lt3/alex/: adapter_traits.h  any.h  character.h  defines.h  from_to.h  grammar.h  grammar_abstract.h  grammar_adapter.h  literal.h  not.h  one_of.h  optional.h  parse.h  parser.h  parser_adapter.h  reader.h  reader_abstract.h  recursive.h  repeat.h  stream.h  stream_adapter.h  stream_buffer.h  stream_forker.h  stream_range.h  stream_traits.h  symbol.h  tag.h
include/vera/: vera.hpp
script/: build.sh  generate-header.sh  hook.sh
scripts/: build.sh  install_catch2.sh
single_include/alex/: alex.hpp
test/: CMakeLists.txt  test_basic.cpp  test_test.cpp
test/alex/: test_any.cpp  test_any_but.cpp  test_buffer_stream.cpp  test_empty.cpp  test_eof.cpp  test_from_to.cpp  test_grammar.cpp  test_grammar_abstract.cpp  test_literal.cpp  test_one_of.cpp  test_optional.cpp  test_repeat.cpp  test_stream_forker.cpp  test_stream_range.cpp
test/lt3/alex/: parser_test.cpp  range_stream_test.cpp  stream_forker_test.cpp
